nav logo linking, logo added to footer, watermark update on mobile in footer

--- a/css/nav.css
+++ b/css/nav.css
@@ -412,6 +412,13 @@
             max-width: 96px;
             align-self: center;
             margin-right: auto;
+            display: inline-flex;
+        }
+
+        .mobile-nav .logo-image--mobile img {
+            display: block;
+            width: 100%;
+            height: auto;
         }
 
         .mobile-nav .hamburger {
